plugins {
	id 'fabric-loom' version '1.8-SNAPSHOT'
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories
	maven {
		name = "meteor-maven"
		url = "https://maven.meteordev.org/releases"
	}
	mavenLocal()
	mavenCentral()
}

configurations {
	implementation.extendsFrom lib
	api.extendsFrom lib
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	implementation "meteordevelopment:orbit:0.2.4"
	implementation "io.github.racoondog:norbit:1.2.0"
	implementation 'org.reflections:reflections:0.10.2'
	implementation 'org.mozilla:rhino:1.7.14'
	implementation group: 'com.personthecat', name: 'fastnoise', version: '0.10'
}

base {
	archivesName = project.archives_base_name
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	dependsOn configurations.lib
	from {
		duplicatesStrategy = DuplicatesStrategy.EXCLUDE
		configurations.lib.collect {
			zipTree(it)
		}
	}
	from("LICENSE") {
		rename { "${it}_${base.archivesName.get()}"}
	}
	manifest {}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
